[tool.poetry]
name = "poilane"
version = "0.1.0"
description = ""
authors = ["multi prise <korokoko.toi@gmail.com>"]

[tool.poetry.dependencies]
fastapi = "^0.66.0"
loguru = "^0.5.3"
pytezos = "^3.2.11"
python = "^3.7"
uvicorn = "^0.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
